manifests/telemetry/base/prometheus/thanos/compact.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: thanos-compact
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: thanos-compact
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: http
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /metrics
