manifests/telemetry/base/prometheus/thanos/query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-query
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: thanos-query
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thanos-query
    spec:
      serviceAccountName: thanos-query
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: thanos-query
          image: thanos:TO_BE_FILLED
          imagePullPolicy: IfNotPresent
          args:
            - query
            - --grpc-address=0.0.0.0:10901
            - --http-address=0.0.0.0:9090
            - --log.level=info
            - --enable-auto-gomemlimit
            - --auto-gomemlimit.ratio=0.7
            - --query.promql-engine=thanos
            - --query.replica-label=prometheus_replica
            - --enable-feature=promql-experimental-functions
            - --endpoint=dnssrv+_grpc._tcp.prometheus-operated
            - --endpoint=dnssrv+_grpc._tcp.thanos-store
          ports:
            - name: grpc
              containerPort: 10901
            - name: http
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: http
            failureThreshold: 4
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /-/ready
              port: http
            failureThreshold: 20
            periodSeconds: 5
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 20m
              memory: 50Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: thanos-query
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: thanos-query
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: http
              protocol: TCP
          rules:
            http: [{}]
---
apiVersion: v1
kind: Service
metadata:
  name: thanos-query
spec:
  selector:
    app.kubernetes.io/name: thanos-query
  ports:
    - name: http
      port: 9090
      targetPort: http
    - name: grpc
      appProtocol: kubernetes.io/h2c
      port: 10901
      targetPort: grpc
