manifests/telemetry/base/prometheus/thanos/store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: thanos-store
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thanos-store
    spec:
      serviceAccountName: thanos-store
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: thanos-store
          image: thanos:TO_BE_FILLED
          imagePullPolicy: IfNotPresent
          args:
            - store
            - --enable-auto-gomemlimit
            - --http-address=0.0.0.0:10902
            - --grpc-address=0.0.0.0:10901
            - --no-cache-index-header
            - --index-cache-size=250MB
            - --objstore.config-file=/etc/thanos/bucket.yaml
          volumeMounts:
            - name: thanos-s3-secrets
              mountPath: /mnt/secrets-store
              readOnly: true
            - name: thanos-object-store-config
              mountPath: /etc/thanos
              readOnly: true
          ports:
            - name: http
              containerPort: 10902
            - name: grpc
              containerPort: 10901
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: http
            failureThreshold: 4
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /-/ready
              port: http
            failureThreshold: 20
            periodSeconds: 5
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 20m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
      volumes:
        - name: thanos-s3-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: telemetry-s3-credentials
        - name: thanos-object-store-config
          configMap:
            name: thanos-object-store-config
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: thanos-store
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: thanos-store
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: http
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /metrics
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: thanos-query
      toPorts:
        - ports:
            - port: grpc
              protocol: TCP
          rules:
            http: [{}]
---
apiVersion: v1
kind: Service
metadata:
  name: thanos-store
spec:
  selector:
    app.kubernetes.io/name: thanos-store
  clusterIP: None
  ports:
    - name: http
      port: 10902
      targetPort: http
    - name: grpc
      port: 10901
      targetPort: grpc
